--- a/src/templates/tr/base.html
+++ b/src/templates/tr/base.html
@@ -117,7 +117,7 @@ Web Almanac, web topluluğunun sıkı çalışmasıyla mümkün olmuştur. {{ se
 {% block methodology_stat_2_title %}İşlenen Veriler{% endblock %}
 {% block methodology_link %}Metodolojimiz hakkında bilgi edinin{% endblock %}
 {% block methodology_description %}
-Aksi belirtilmedikçe, {{ year }} Web Almanac&#8217;ın tüm {{ supported_chapters | length }} bölümlerindeki metrikler, HTTP Archive veri kümesinden elde edilir. HTTP Archive, 2010'dan beri web'in nasıl oluşturulduğunu izleyen, topluluk tarafından yürütülen bir projedir. WebPageTest ve Lighthouse örtüsü altında, {{ self.total_websites() }} web siteleri hakkındaki metadata aylık olarak test edilir ve analiz için herkese açık bir BigQuery veritabanına dahil edilir. {{ self.dataset() }} veri kümesi {{ year }} Web Almanak&#8217;ın metrikleri için temel olarak kullanıldı.  Daha fazla bilgi için, Methodoloji sayfasını görün.
+Aksi belirtilmedikçe, {{ year }} Web Almanac&#8217;ın tüm {{ supported_chapters | length }} bölümlerindeki metrikler, HTTP Archive veri kümesinden elde edilir. HTTP Archive, 2010'dan beri web'in nasıl oluşturulduğunu izleyen, topluluk tarafından yürütülen bir projedir. WebPageTest ve Lighthouse örtüsü altında, {{ self.total_websites() }} web siteleri hakkındaki metadata aylık olarak test edilir ve analiz için herkese açık bir BigQuery veritabanına dahil edilir. {{ self.dataset() }} veri kümesi {{ year }} Web Almanac&#8217;ın metrikleri için temel olarak kullanıldı.  Daha fazla bilgi için, Methodoloji sayfasını görün.
 {% endblock %}
 
 {% block introduction %}Giriş{% endblock %}
