--- a/src/templates/tr/2019/base.html
+++ b/src/templates/tr/2019/base.html
@@ -15,6 +15,10 @@
   </p>
 
   <p>
+    Web Almanac&#8217;taki bulguların çoğu kutlanmaya değer, ama yüksek kaliteli kullanıcı deneyimleri sunmak için hâlâ gereken çalışmanın önemli bir hatırlatıcısıdır. Her bölümdeki veriye dayalı analizler, daha iyi bir web geliştirmek için hepimizin paylaştığı bir sorumluluk biçimidir. Bu onu yanlış anlayanları utandırmakla ilgili değil, ama en iyi uygulamalara giden yolda yol gösterici bir ışığın parlaması ile ilgilidir, öyleyse işleri yapmanın açık ve doğru bir yolu vardır. Web topluluğunun sürekli yardımı ile, bunu yıllık bir gelenek haline getirmeyi umuyoruz, böylece her yıl ilerlememizi takip edebilir ve gerektiğinde kurs düzeltmelerini yapabiliriz.
+  </p>
+
+  <p>
     Bu raporda öğrenilecek çok şey var, öyleyse keşfetmeye başlayın ve öğrendiklerinizi toplulukla paylaşın, böylece web&#8217;in durumuna ilişkin anlayışımızı toplu olarak ilerletebiliriz.
   </p>
 
