--- a/src/templates/tr/base.html
+++ b/src/templates/tr/base.html
@@ -109,7 +109,7 @@ Misyonumuz, HTTP Archive&#8217;ın ham istatistiklerini ve eğilimlerini web top
 {% endif %}
 
 {% block contributors_description %}
-Web Almanac, web topluluğunun sıkı çalışmasıyla mümkün olmuştur. {{ self.contributors() }} kişiler {{ year }} Web Almanak'ın planlama, araştırma, yazma ve üretim aşamalarında sayısız saatler gönüllü oldular.
+Web Almanac, web topluluğunun sıkı çalışmasıyla mümkün olmuştur. {{ self.contributors() }} kişi {{ year }} Web Almanak'ın planlama, araştırma, yazma ve üretim aşamalarında sayısız saatler gönüllü oldular.
 {% endblock %}
 {% block contributors_link %}Katkıda bulunanları görün{% endblock %}
 
