Fix typo in our difficult to type name :-)

--- a/src/templates/ja/base.html
+++ b/src/templates/ja/base.html
@@ -98,7 +98,7 @@
 {% block accessibility_statement %}アクセシビリティに関する声明{% endblock %}
 
 {% block featured_chapter %}注目の章{% endblock %}
-{% block featured_chapter_last_year %}{{ year|int -1 }} Web Alamanc<br />注目の章{% endblock %}
+{% block featured_chapter_last_year %}{{ year|int -1 }} Web Almanac<br />注目の章{% endblock %}
 
 {# Check if read_chapter already defined in child template as macros can't be overridden #}
 {% if not read_chapter %}
