--- a/src/templates/zh-CN/base.html
+++ b/src/templates/zh-CN/base.html
@@ -98,7 +98,7 @@
 {% block accessibility_statement %}无障碍可访问声明{% endblock %}
 
 {% block featured_chapter %}章节精选{% endblock %}
-{% block featured_chapter_last_year %}{{ year|int -1 }} Web Alamanc<br />章节精选{% endblock %}
+{% block featured_chapter_last_year %}{{ year|int -1 }} Web Almanac<br />章节精选{% endblock %}
 
 {# Check if read_chapter already defined in child template as macros can't be overridden #}
 {% if not read_chapter %}
