--- a/src/templates/base/base_chapter.html
+++ b/src/templates/base/base_chapter.html
@@ -6,6 +6,21 @@
 {% block image_height %}433{% endblock %}
 {% block image_width %}866{% endblock %}
 
+{% block meta %}
+    {{ super() }}
+    <meta name="citation_title" content="{{ self.citation_title() }}">
+    {% for author in metadata.get('authors') %}
+    {%- set authordata = config.contributors[author] if author in config.contributors else None -%}
+    <meta name="citation_author" content="{{ authordata.name if authordata.name else author }}">
+    {% endfor -%}
+    {% if date_published and date_published|length > 10 -%}
+    <meta name="citation_publication_date" content="{{ date_published[0:4] }}/{{ date_published[5:7] }}/{{ date_published[8:10] }}">
+    {% endif -%}
+    <meta name="citation_journal_title" content="{{ self.citation_journal_title() }}">
+    <meta name="citation_volume" content="{{ year }}-{{ language }}">
+    <meta name="citation_technical_report_institution" content="HTTP Archive">
+{% endblock %}
+
 {% block author_structured_data %}
       {% for author in metadata.get('authors') %}{% if loop.length > 1 and loop.index == 1 %}[{% endif -%}
       {% set authordata = config.contributors[author] if author in config.contributors else None -%}
