--- a/src/templates/es/base_chapter.html
+++ b/src/templates/es/base_chapter.html
@@ -1,7 +1,7 @@
 {% extends "base/base_chapter.html" %}
 
 {% block title %}{{ metadata.get('title') }} | {{ year }} | Web Almanac por HTTP Archive{% endblock %}
-{% block citation_title %}Web Almanac {{ year }}: Capítulo {{ metadata.get('title') }}{% endblock %}
+{% block citation_title %}Web Almanac {{ year }}: {{ metadata.get('title') }}{% endblock %}
 {% block citation_journal_title %}Web Almanac {{ year }}{% endblock %}
 
 {% block description %}{{ metadata.get('description','Capítulo' + metadata.get('title') + ' del Web Almanac '+ year + " explorando el uso de " + metadata.get('description',metadata.get('title')) + ' en la web.') }}{% endblock %}
