--- a/src/templates/fr/base_chapter.html
+++ b/src/templates/fr/base_chapter.html
@@ -1,7 +1,7 @@
 {% extends "base/base_chapter.html" %}
 
 {% block title %}{{ metadata.get('title') }} | {{ year }} | Le Web Almanac par HTTP Archive{% endblock %}
-{% block citation_title %}Le Web Almanac {{ year }} : Chapitre {{ metadata.get('title') }}{% endblock %}
+{% block citation_title %}Le Web Almanac {{ year }} : {{ metadata.get('title') }}{% endblock %}
 {% block citation_journal_title %}Le Web Almanac {{ year }}{% endblock %}
 
 {% block description %}{{ metadata.get('description','Chapitre' + metadata.get('title') + ' du Web Almanac'+ year + " explorant l’utilisation des " + metadata.get('description',metadata.get('title')) + ' sur le web.') }}{% endblock %}
