--- a/src/templates/hi/base_chapter.html
+++ b/src/templates/hi/base_chapter.html
@@ -1,7 +1,7 @@
 {% extends "base/base_chapter.html" %}
 
 {% block title %}{{ metadata.get('title') }} | {{ year }} | HTTP Archive द्वारा Web Almanac{% endblock %}
-{% block citation_title %}{{ year }} Web Almanac: {{ metadata.get('title') }} अध्याय{% endblock %}
+{% block citation_title %}{{ year }} Web Almanac: {{ metadata.get('title') }}{% endblock %}
 {% block citation_journal_title %}{{ year }} Web Almanac{% endblock %}
 
 {% block description %}{{ 'Web Almanac ' + year + ' के ' metadata.get('description',metadata.get('title') + ' अध्याय में ' + metadata.get('description',metadata.get('title')) + ' को कवर किया गया है!') }}{% endblock %}
