Add Google Scholar meta data (#2191)
* Add Google Scholar meta data

* Restrict to English and change Volume and Issue

* Remove Chapter from title and add other meta data

--- a/src/templates/en/base_chapter.html
+++ b/src/templates/en/base_chapter.html
@@ -1,6 +1,8 @@
 {% extends "base/base_chapter.html" %}
 
 {% block title %}{{ metadata.get('title') }} | {{ year }} | The Web Almanac by HTTP Archive{% endblock %}
+{% block citation_title %}The {{ year }} Web Almanac: {{ metadata.get('title') }}{% endblock %}
+{% block citation_journal_title %}The {{ year }} Web Almanac{% endblock %}
 
 {% block description %}{{ metadata.get('description',metadata.get('title') + ' chapter of the ' + year + ' Web Almanac probing into the use of ' + metadata.get('description',metadata.get('title')) + ' on the web.') }}{% endblock %}
 
