--- a/src/templates/zh-CN/base_chapter.html
+++ b/src/templates/zh-CN/base_chapter.html
@@ -1,6 +1,8 @@
 {% extends "base/base_chapter.html" %}
 
 {% block title %}{{ metadata.get('title') }} | {{ year }} | Web Almanac 源于 HTTP Archive{% endblock %}
+{% block citation_title %}{{ year }} Web Almanac网络年鉴: {{ metadata.get('title') }}{% endblock %}
+{% block citation_journal_title %}{{ year }} Web Almanac网络年鉴{% endblock %}
 
 {% block description %}{{ metadata.get('description',metadata.get('title') + ' 章节 ' + year + ' 调查Web Almanac的使用状况 ' + metadata.get('description',metadata.get('title')) + ' 在 web中。') }}{% endblock %}
 
