update by comments

--- a/src/static/css/almanac.css
+++ b/src/static/css/almanac.css
@@ -378,6 +378,7 @@ h2.header {
 }
 
 .btn {
+  border: 1px solid #1a2b49;
   border-radius: 50px;
   padding: 15px 30px;
   background: #1a2b49;
@@ -386,38 +387,35 @@ h2.header {
   font-size: 0.875rem;
   text-decoration: none;
   text-align: center;
-  box-shadow: 2px 2px 3px 3px lightgray;
 }
 
-.alt.btn.cta > svg {
-  margin-right: 0px;
+.btn.chapter-cta > svg {
+  margin: 0px 5px;
 }
 
-.alt.btn.cta {
+.chapter-cta {
   position: fixed;
+  border:none;
+  box-shadow: 2px 2px 3px 3px lightgray;
   padding: 10px 15px;
   opacity: 0.9;
   text-decoration: none;
   z-index: 1;
 }
 
-.alt.btn.cta:nth-child(2) {
+.comment-cta {
   bottom: 8.5em;
   right: 0.125em;
 }
 
-.alt.btn.cta:nth-child(3) {
+.suggest-edit-cta {
   bottom: 4.5em;
   right: 0.125em;
 }
 
-.alt.btn.cta:nth-child(4) {
+.help-translate-cta {
   bottom: 0.6em;
   right: 0.125em;
-}
-
-.alt.btn.cta > span:nth-child(2) {
-  margin-left: 0.35em;
 }
 
 .btn:hover,
@@ -515,7 +513,6 @@ footer.alt-bg a:focus {
 footer {
   padding-top: 40px;
   padding-bottom: 40px;
-  z-index: 2;
 }
 
 .top-header,
@@ -843,7 +840,7 @@ p.copyright a {
   header nav:first-of-type,
   footer nav:first-of-type,
   header .cta,
-  .alt.btn.cta > span {
+  .chapter-cta > span {
     display: none;
   }
 
@@ -996,7 +993,7 @@ p.copyright a {
   header nav:first-of-type,
   footer nav:first-of-type,
   header .cta,
-  .alt.btn.cta > span {
+  .chapter-cta > span {
     display: none;
   }
 
