--- a/src/static/css/almanac.css
+++ b/src/static/css/almanac.css
@@ -395,19 +395,25 @@ h2.header {
 
 #cta-container {
   display: flex;
-  flex-direction: column;
+  height: 0;
+  flex-direction: row;
   align-items: flex-end;
   position: sticky;
-  top: 63vh;
+  top: calc(100vh - 1em);
   z-index: 1;
+  justify-content: flex-end;
+}
+
+.spacer {
+  min-height: 60px;
 }
 
 .chapter-cta {
   border: none;
   box-shadow: 0 0 1rem 0 rgba(78, 85, 100, 0.2);
   padding: 10px 12px;
-  opacity: 0.8;
   margin-top: 1em;
+  margin-left: 1em;
 }
 
 .btn:hover,
@@ -831,8 +837,7 @@ p.copyright a {
 
   header nav:first-of-type,
   footer nav:first-of-type,
-  header .cta,
-  .chapter-cta > span {
+  header .cta {
     display: none;
   }
 
@@ -985,7 +990,7 @@ p.copyright a {
   header nav:first-of-type,
   footer nav:first-of-type,
   header .cta,
-  .chapter-cta > span {
+  .not_mobile {
     display: none;
   }
 
