--- a/src/templates/base/base_chapter.html
+++ b/src/templates/base/base_chapter.html
@@ -65,7 +65,6 @@ window.discussion_url="https://discuss.httparchive.org/t/{{ metadata.get('discus
       {{ self.explore_the_results() }}
     </a>
   </h2>
-  
   <a class="alt btn" href="{{ metadata.get('results') }}">
     <svg width="18" height="18" role="img" aria-hidden="true">
       <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#bar-chart"></use>
@@ -77,6 +76,25 @@ window.discussion_url="https://discuss.httparchive.org/t/{{ metadata.get('discus
       <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#sql"></use>
     </svg>
     {{ self.queries() }}
+  </a>
+  <a class="alt btn" href="https://discuss.httparchive.org/t/{{ metadata.get('discuss') }}">
+    <svg width="18" height="18" role="img" aria-hidden="true">
+      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#comment"></use>
+    </svg>
+    <span class="num_comments">{{ self.comments_fallback() }}</span> <span data-translation class="comment-singular">{{ self.comment() }}</span>
+    <span data-translation class="comment-plural">{{ self.comments() }}</span>
+  </a>
+  <a class="alt btn" href="https://github.com/HTTPArchive/almanac.httparchive.org/issues/new?assignees=&labels=bug%2C+writing&template=2020-content-issue.md&title=Issue+with+the+2020+%5BCHAPTER%5D+chapter">
+    <svg width="18" height="18" role="img" aria-hidden="true">
+      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#github"></use>
+    </svg>
+    Suggest Edit
+  </a>
+  <a class="alt btn" href="https://github.com/HTTPArchive/almanac.httparchive.org/issues/923/">
+    <svg width="18" height="18" role="img" aria-hidden="true">
+      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#globe"></use>
+    </svg>
+    Help Translate
   </a>
 {% endmacro %}
 
@@ -307,22 +325,8 @@ window.discussion_url="https://discuss.httparchive.org/t/{{ metadata.get('discus
                   <title>{{ self.discuss_this_chapter() }}</title>
                   <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#comment"></use>
                 </svg>
-                <span id="num_comments" aria-hidden="true">{{ self.comments_fallback() }}</span> <span data-translation id="comment-singular">{{ self.comment() }}</span>
-                <span data-translation id="comment-plural" aria-hidden="true">{{ self.comments() }}</span>
-              </a>
-              <a class="alt btn chapter-cta suggest-edit-cta" href="https://github.com/HTTPArchive/almanac.httparchive.org/issues/new?assignees=&labels=bug%2C+writing&template=2020-content-issue.md&title=Issue+with+the+2020+%5BCHAPTER%5D+chapter">
-                <svg width="22" height="22" role="img">
-                  <title>GitHub: Suggest Edit</title>
-                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#github"></use>
-                </svg>
-                <span aria-hidden="true">Suggest Edit</span>
-              </a>
-              <a class="alt btn chapter-cta help-translate-cta" href="https://github.com/HTTPArchive/almanac.httparchive.org/issues/923">
-                <svg width="22" height="22" role="img">
-                  <title>GitHub: Help Translate</title>
-                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#globe"></use>
-                </svg>
-                <span aria-hidden="false">Help Translate</span>
+                <span class="num_comments" aria-hidden="true"><span class="not_mobile">{{ self.comments_fallback() }}</span></span> <span data-translation class="comment-singular not_mobile">{{ self.comment() }}</span>
+                <span data-translation class="comment-plural not_mobile" aria-hidden="true">{{ self.comments() }}</span>
               </a>
             </div>
             {{ render_byline() }}
@@ -330,10 +334,10 @@ window.discussion_url="https://discuss.httparchive.org/t/{{ metadata.get('discus
             <div class="chapter_links">
               {{ render_actions() }}
             </div>
-            <section class="authors">
-                {{ render_authors() }}
-            </section>
         </article>
+        <section class="authors">
+            {{ render_authors() }}
+        </section>
         <nav aria-label="{{ self.prev_next_title() }}" id="chapter-navigation">
             {{ render_prevnext() }}
         </nav>
