--- a/src/static/css/almanac.css
+++ b/src/static/css/almanac.css
@@ -389,33 +389,6 @@ h2.header {
   text-align: center;
 }
 
-.btn.chapter-cta > svg {
-  margin: -6px 3px;
-}
-
-#cta-container {
-  display: flex;
-  height: 0;
-  flex-direction: row;
-  align-items: flex-end;
-  position: sticky;
-  top: calc(100vh - 1em);
-  z-index: 1;
-  justify-content: flex-end;
-}
-
-.spacer {
-  min-height: 60px;
-}
-
-.chapter-cta {
-  border: none;
-  box-shadow: 0 0 1rem 0 rgba(78, 85, 100, 0.2);
-  padding: 10px 12px;
-  margin-top: 1em;
-  margin-left: 1em;
-}
-
 .btn:hover,
 .btn:focus,
 .alt.btn {
@@ -963,6 +936,16 @@ p.copyright a {
     font-size: 16px;
     font-size: 1rem;
     overflow-wrap: break-word;
+  }
+
+  .visually-hidden-mobile {
+    position: absolute !important;
+    height: 1px;
+    width: 1px;
+    overflow: hidden;
+    clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
+    clip: rect(1px, 1px, 1px, 1px);
+    white-space: nowrap; /* added line */
   }
 
   .title-lg {
