--- a/src/templates/base/base_chapter.html
+++ b/src/templates/base/base_chapter.html
@@ -223,7 +223,7 @@ window.discussion_url="https://discuss.httparchive.org/t/{{ metadata.get('discus
       <a id="previous-chapter" title="{{ self.previous() }}" href="/{{lang}}/{{year}}/{{prev_chapter['slug']}}">
           <span class="arrow" aria-hidden="true">&#8963;</span>
           <span class="chapter-no">
-            {{ self.chapter() }} {{ prev_chapter['chapter'] }}
+            {{ self.chapter() }} {{ prev_chapter['chapter_number'] }}
           </span>
           <span class="chapter-title">
               {{ localizedChapterTitles[prev_chapter['slug']] if localizedChapterTitles[prev_chapter['slug']]|length else prev_chapter['title'] }}
@@ -233,7 +233,7 @@ window.discussion_url="https://discuss.httparchive.org/t/{{ metadata.get('discus
       <a id="previous-chapter" title="{{ self.previous() }}" href="/en/{{year}}/{{prev_chapter['slug']}}">
           <span class="arrow" aria-hidden="true">&#8963;</span>
           <span class="chapter-no">
-            {{ self.chapter() }} {{ prev_chapter['chapter'] }}
+            {{ self.chapter() }} {{ prev_chapter['chapter_number'] }}
           </span>
           <span class="chapter-title">
             {{ localizedChapterTitles[prev_chapter['slug']] if localizedChapterTitles[prev_chapter['slug']]|length else prev_chapter['title'] }}
@@ -250,7 +250,7 @@ window.discussion_url="https://discuss.httparchive.org/t/{{ metadata.get('discus
     <a id="next-chapter" title="{{ self.next() }}" href="/{{lang}}/{{year}}/{{next_chapter['title'].lower().replace(' ', '-').replace('/', '')}}">
             <span class="arrow" aria-hidden="true">&#8963;</span>
             <span class="chapter-no">
-              {{ self.chapter() }} {{ next_chapter['chapter'] }}
+              {{ self.chapter() }} {{ next_chapter['chapter_number'] }}
             </span>
             <span class="chapter-title">
               {{ localizedChapterTitles[next_chapter['slug']] if localizedChapterTitles[next_chapter['slug']]|length else next_chapter['title'] }}
@@ -260,7 +260,7 @@ window.discussion_url="https://discuss.httparchive.org/t/{{ metadata.get('discus
     <a id="next-chapter" title="{{ self.next() }}" href="/en/{{year}}/{{next_chapter['title'].lower().replace(' ', '-').replace('/', '')}}">
             <span class="arrow" aria-hidden="true">&#8963;</span>
             <span class="chapter-no">
-              {{ self.chapter() }} {{ next_chapter['chapter'] }}
+              {{ self.chapter() }} {{ next_chapter['chapter_number'] }}
             </span>
             <span class="chapter-title">
               {{ localizedChapterTitles[next_chapter['slug']] if localizedChapterTitles[next_chapter['slug']]|length else next_chapter['title'] }}
