Change bazzadp to tunetheweb

--- a/src/templates/base/accessibility_statement.html
+++ b/src/templates/base/accessibility_statement.html
@@ -10,9 +10,9 @@
 {
   "@type": "Person",
   "sameas": [
-    "https://almanac.httparchive.org{{ url_for('contributors', year=year, lang=lang, _anchor='bazzadp') }}",
+    "https://almanac.httparchive.org{{ url_for('contributors', year=year, lang=lang, _anchor='tunetheweb') }}",
     "https://twitter.com/tunetheweb",
-    "https://github.com/bazzadp"
+    "https://github.com/tunetheweb"
     ],
   "name": "Barry Pollard"
 }
