--- a/src/templates/pt/base.html
+++ b/src/templates/pt/base.html
@@ -158,7 +158,7 @@ Salvo indicação em contrário, as métricas em todos os {{ supported_chapters 
     "mobile-web": "Web móvel",
     "ecommerce": "Comércio eletrônico",
     "cms": "CMS",
-    "compression": "Comércio eletrônico",
+    "compression": "Compressão",
     "caching": "Armazenamento em Cache",
     "cdn": "CDN",
     "page-weight": "Peso da página",
