--- a/src/templates/en/base_chapter.html
+++ b/src/templates/en/base_chapter.html
@@ -17,6 +17,7 @@
 {% block comments_fallback %}Comments{% endblock %}
 {% block queries %}View queries{% endblock %}
 {% block results %}View results{% endblock %}
+{% block suggest_edit %}Suggest edit{% endblock %}
 {% block figure_sql %}View query{% endblock %}
 {% block figure_data %}View data{% endblock %}
 {% block figure_image %}View image{% endblock %}
