--- a/src/templates/es/base_chapter.html
+++ b/src/templates/es/base_chapter.html
@@ -17,6 +17,7 @@
 {% block comments_fallback %}Comentarios{% endblock %}
 {% block queries %}Ver consultas{% endblock %}
 {% block results %}Ver resultados{% endblock %}
+{% block suggest_edit %}Sugerir editar{% endblock %}
 {% block figure_sql %}Ver consulta{% endblock %}
 {% block figure_data %}Ver datos{% endblock %}
 {% block figure_image %}Ver imagen{% endblock %}
