--- a/src/templates/fr/base_chapter.html
+++ b/src/templates/fr/base_chapter.html
@@ -17,6 +17,7 @@
 {% block comments_fallback %}Commentaires{% endblock %}
 {% block queries %}Afficher les requêtes{% endblock %}
 {% block results %}Voir les résultats{% endblock %}
+{% block suggest_edit %}Suggérer une modification{% endblock %}
 {% block figure_sql %}Afficher la requête{% endblock %}
 {% block figure_data %}Afficher les données{% endblock %}
 {% block figure_image %}Voir l'image{% endblock %}
