--- a/src/templates/hi/base_chapter.html
+++ b/src/templates/hi/base_chapter.html
@@ -17,6 +17,7 @@
 {% block comments_fallback %}टिप्पणियाँ{% endblock %}
 {% block queries %}सवाल देखें{% endblock %}
 {% block results %}परिणाम देखें{% endblock %}
+{% block suggest_edit %}सुझाव संपादित करें{% endblock %}
 {% block figure_sql %}सवाल देखें{% endblock %}
 {% block figure_data %}डेटा देखें{% endblock %}
 {% block figure_image %}छवि देखें{% endblock %}
