--- a/src/templates/it/base_chapter.html
+++ b/src/templates/it/base_chapter.html
@@ -17,6 +17,7 @@
 {% block comments_fallback %}Commenti{% endblock %}
 {% block queries %}Visualizza le query{% endblock %}
 {% block results %}Vedi i risultati{% endblock %}
+{% block suggest_edit %}Suggerisci modifica{% endblock %}
 {% block figure_sql %}Visualizza query{% endblock %}
 {% block figure_data %}Visualizza i dati{% endblock %}
 {% block figure_image %}Guarda l'immagine{% endblock %}
