--- a/src/templates/ja/base_chapter.html
+++ b/src/templates/ja/base_chapter.html
@@ -17,6 +17,7 @@
 {% block comments_fallback %}コメント{% endblock %}
 {% block queries %}クエリを表示{% endblock %}
 {% block results %}結果を表示{% endblock %}
+{% block suggest_edit %}編集を提案する{% endblock %}
 {% block figure_sql %}クエリを表示{% endblock %}
 {% block figure_data %}データを見る{% endblock %}
 {% block figure_image %}画像を見る{% endblock %}
