--- a/src/templates/nl/base.html
+++ b/src/templates/nl/base.html
@@ -30,7 +30,7 @@
 
 {% block page_navigation %}Paginanavigatie{% endblock %}
 
-{% block help_translate %}Helpen Vertalen{% endblock %}
+{% block help_translate %}Helpen vertalen{% endblock %}
 {% block translation_not_available %}Engels - niet beschikbaar in het nederlands{% endblock %}
 {% block language_switcher %}Taalwisselaar{% endblock %}
 {% block year_switcher %}Jaarwisselaar{% endblock %}
