--- a/src/templates/nl/base_chapter.html
+++ b/src/templates/nl/base_chapter.html
@@ -17,6 +17,7 @@
 {% block comments_fallback %}opmerkingen{% endblock %}
 {% block queries %}Bekijk vragen{% endblock %}
 {% block results %}Bekijk resultaten{% endblock %}
+{% block suggest_edit %}Bewerken voorstellen{% endblock %}
 {% block figure_sql %}Bekijk vraag{% endblock %}
 {% block figure_data %}Bekijk gegevens{% endblock %}
 {% block figure_image %}Bekijk beeld{% endblock %}
