--- a/src/templates/pt/base_chapter.html
+++ b/src/templates/pt/base_chapter.html
@@ -17,6 +17,7 @@
 {% block comments_fallback %}Comentários{% endblock %}
 {% block queries %}Ver consultas{% endblock %}
 {% block results %}Ver resultados{% endblock %}
+{% block suggest_edit %}Sugerir edição{% endblock %}
 {% block figure_sql %}Ver consulta{% endblock %}
 {% block figure_data %}Ver dados{% endblock %}
 {% block figure_image %}Ver imagem{% endblock %}
