--- a/src/templates/tr/base_chapter.html
+++ b/src/templates/tr/base_chapter.html
@@ -17,6 +17,7 @@
 {% block comments_fallback %}Yorumlar{% endblock %}
 {% block queries %}Sorguları görüntüleyin{% endblock %}
 {% block results %}Sonuçları keşfedin{% endblock %}
+{% block suggest_edit %}Düzenleme öner{% endblock %}
 {% block figure_sql %}Sorguyu görüntüleyin{% endblock %}
 {% block figure_data %}Verileri görüntüleyin{% endblock %}
 {% block figure_image %}Görseli görün{% endblock %}
