--- a/src/templates/uk/base_chapter.html
+++ b/src/templates/uk/base_chapter.html
@@ -17,6 +17,7 @@
 {% block comments_fallback %}Коментарі{% endblock %}
 {% block queries %}Запити{% endblock %}
 {% block results %}Результати{% endblock %}
+{% block suggest_edit %}Запропонувати редагувати{% endblock %}
 {% block figure_sql %}Переглянути запит{% endblock %}
 {% block figure_data %}Переглянути дані{% endblock %}
 {% block figure_image %}Переглянути зображення{% endblock %}
