--- a/src/templates/zh-CN/base_chapter.html
+++ b/src/templates/zh-CN/base_chapter.html
@@ -17,6 +17,7 @@
 {% block comments_fallback %}评论{% endblock %}
 {% block queries %}查看请求{% endblock %}
 {% block results %}查看结果{% endblock %}
+{% block suggest_edit %}建议编辑{% endblock %}
 {% block figure_sql %}查看请求{% endblock %}
 {% block figure_data %}查看资料{% endblock %}
 {% block figure_image %}看图片{% endblock %}
