--- a/src/templates/base/base_chapter.html
+++ b/src/templates/base/base_chapter.html
@@ -88,13 +88,13 @@ window.discussion_url="https://discuss.httparchive.org/t/{{ metadata.get('discus
     <svg width="18" height="18" role="img" aria-hidden="true">
       <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#github"></use>
     </svg>
-    Suggest Edit
+    {{ self.suggest_edit() }}
   </a>
   <a class="alt btn" href="https://github.com/HTTPArchive/almanac.httparchive.org/issues/923/">
     <svg width="18" height="18" role="img" aria-hidden="true">
       <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#globe"></use>
     </svg>
-    Help Translate
+    {{ self.help_translate() }}
   </a>
 {% endmacro %}
 
