--- a/src/templates/en/base.html
+++ b/src/templates/en/base.html
@@ -30,7 +30,7 @@ Our mission is to combine the raw stats and trends of the HTTP Archive with the 
 
 {% block page_navigation %}Page navigation{% endblock %}
 
-{% block help_translate %}Help Translate{% endblock %}
+{% block help_translate %}Help translate{% endblock %}
 {% block translation_not_available %}English - not available in English{% endblock %}
 {% block language_switcher %}Language Switcher{% endblock %}
 {% block year_switcher %}Year Switcher{% endblock %}
