--- a/src/templates/it/base.html
+++ b/src/templates/it/base.html
@@ -30,7 +30,7 @@ La nostra missione è combinare le statistiche grezze e le tendenze del HTTP Arc
 
 {% block page_navigation %}Navigazione tra le pagine{% endblock %}
 
-{% block help_translate %}Help Translate{% endblock %}
+{% block help_translate %}Ayuda a traducir{% endblock %}
 {% block translation_not_available %}Inglese - non disponibile in inglese{% endblock %}
 {% block language_switcher %}Seleziona la lingua{% endblock %}
 {% block year_switcher %}Seleziona l'anno{% endblock %}
