--- a/src/templates/pt/base.html
+++ b/src/templates/pt/base.html
@@ -30,7 +30,7 @@ Nossa missão é combinar as estatísticas brutas e as tendências do HTTP Archi
 
 {% block page_navigation %}Navegação de página{% endblock %}
 
-{% block help_translate %}Ajudar Traduzir{% endblock %}
+{% block help_translate %}Ajudar traduzir{% endblock %}
 {% block translation_not_available %}Inglês - não disponível em Português{% endblock %}
 {% block language_switcher %}Selecione o Idioma{% endblock %}
 {% block year_switcher %}Selecione o Ano{% endblock %}
