--- a/src/templates/tr/base.html
+++ b/src/templates/tr/base.html
@@ -30,7 +30,7 @@ Misyonumuz, HTTP Archive&#8217;ın ham istatistiklerini ve eğilimlerini web top
 
 {% block page_navigation %}Sayfa navigasyonu{% endblock %}
 
-{% block help_translate %}Çeviriye Yardımı Edin{% endblock %}
+{% block help_translate %}Çeviriye yardımı edin{% endblock %}
 {% block translation_not_available %}İngilizce - İngilizce olarak mevcut değil{% endblock %}
 {% block language_switcher %}Dil Değiştirici{% endblock %}
 {% block year_switcher %}Yıl Değiştirici{% endblock %}
