--- a/src/templates/zh-TW/base_chapter.html
+++ b/src/templates/zh-TW/base_chapter.html
@@ -17,6 +17,7 @@
 {% block comments_fallback %}評論{% endblock %}
 {% block queries %}查看查詢{% endblock %}
 {% block results %}查看結果{% endblock %}
+{% block suggest_edit %}建議編輯{% endblock %}
 {% block figure_sql %}查看查詢{% endblock %}
 {% block figure_data %}查看資料{% endblock %}
 {% block figure_image %}看圖片{% endblock %}
