--- a/src/static/css/almanac.css
+++ b/src/static/css/almanac.css
@@ -938,6 +938,16 @@ p.copyright a {
     overflow-wrap: break-word;
   }
 
+  .visually-hidden-mobile {
+    position: absolute !important;
+    height: 1px;
+    width: 1px;
+    overflow: hidden;
+    clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
+    clip: rect(1px, 1px, 1px, 1px);
+    white-space: nowrap; /* added line */
+  }
+
   .title-lg {
     font-size: 40px;
     font-size: 2.5rem;
