--- a/src/templates/ja/2020/base.html
+++ b/src/templates/ja/2020/base.html
@@ -11,7 +11,7 @@
 </p>
 
 <p>
-  今回のWeb Almanacの目的は、2020年を忘れることではなく、追悼することです。良くも悪くも、これは私たちの歴史の一章です。今年は外部からのプレッシャーが大きかったにもかかわらず、<em>ウェブコミュニティから100人以上の<a href="./contributors">コントリビューター</a></em>がサインアップし、2020年とウェブの状況を記憶することに特化したプロジェクトのために、数え切れないほどの時間をボランティアで提供してくれました。驚くべきことに、今年の版では、3つの新しい章を追加し、1つの章を失うだけで、実際に<em>範囲を拡大することができました。
+  今回のWeb Almanacの目的は、2020年を忘れることではなく、追悼することです。良くも悪くも、これは私たちの歴史の一章です。今年は外部からのプレッシャーが大きかったにもかかわらず、<em>ウェブコミュニティから100人以上の<a href="./contributors">コントリビューター</a></em>がサインアップし、2020年とウェブの状況を記憶することに特化したプロジェクトのために、数え切れないほどの時間をボランティアで提供してくれました。驚くべきことに、今年の版では、3つの新しい章を追加し、1つの章を失うだけで、実際に範囲を<em>拡大</em>することができました。
 </p>
 
 <p>
