--- a/src/templates/en/search.html
+++ b/src/templates/en/search.html
@@ -2,9 +2,9 @@
 
 {% block title %}Search | The Web Almanac by HTTP Archive{% endblock %}
 
-{% block description %}Search Results for the Web Alamanc{% endblock %}
+{% block description %}Search Results for the Web Almanac{% endblock %}
 
 {% block twitter_image_alt %}Web Almanac Search{% endblock %}
 
-{% block no_results %}No Results{% endblock %}
+{% block no_results %}No results{% endblock %}
 {% block search_in_english %}Search in English{% endblock %}
