--- a/src/templates/hi/search.html
+++ b/src/templates/hi/search.html
@@ -1,10 +1,10 @@
 {% extends "base/search.html" %}
 
-{% block title %}Search | The Web Almanac by HTTP Archive{% endblock %}
+{% block title %}खोज | HTTP Archive द्वारा Web Almanac{% endblock %}
 
-{% block description %}Search Results for the Web Alamanc{% endblock %}
+{% block description %}Web Almanac के लिए खोज परिणाम{% endblock %}
 
-{% block twitter_image_alt %}Web Almanac Search{% endblock %}
+{% block twitter_image_alt %}Web Almanac के लिए खोज परिणाम{% endblock %}
 
-{% block no_results %}No Results{% endblock %}
-{% block search_in_english %}Search in English{% endblock %}
+{% block no_results %}कोई परिणाम नहीं{% endblock %}
+{% block search_in_english %}अंग्रेजी में खोजें{% endblock %}
