--- a/src/templates/it/search.html
+++ b/src/templates/it/search.html
@@ -1,10 +1,10 @@
 {% extends "base/search.html" %}
 
-{% block title %}Search | The Web Almanac by HTTP Archive{% endblock %}
+{% block title %}Ricerca | Il Web Almanac di HTTP Archive{% endblock %}
 
-{% block description %}Search Results for the Web Alamanc{% endblock %}
+{% block description %}Risultati della ricerca per il Web Almanac{% endblock %}
 
-{% block twitter_image_alt %}Web Almanac Search{% endblock %}
+{% block twitter_image_alt %}Ricerca Web Almanac{% endblock %}
 
-{% block no_results %}No Results{% endblock %}
-{% block search_in_english %}Search in English{% endblock %}
+{% block no_results %}Nessun risultato{% endblock %}
+{% block search_in_english %}Cerca in inglese{% endblock %}
