--- a/src/templates/ja/search.html
+++ b/src/templates/ja/search.html
@@ -1,10 +1,10 @@
 {% extends "base/search.html" %}
 
-{% block title %}Search | The Web Almanac by HTTP Archive{% endblock %}
+{% block title %}検索 | HTTP ArchiveによるWeb Almanac{% endblock %}
 
-{% block description %}Search Results for the Web Alamanc{% endblock %}
+{% block description %}Web Almanacの検索結果{% endblock %}
 
-{% block twitter_image_alt %}Web Almanac Search{% endblock %}
+{% block twitter_image_alt %}Web Almanac検索{% endblock %}
 
-{% block no_results %}No Results{% endblock %}
-{% block search_in_english %}Search in English{% endblock %}
+{% block no_results %}結果がありません{% endblock %}
+{% block search_in_english %}英語で検索{% endblock %}
