--- a/src/templates/nl/search.html
+++ b/src/templates/nl/search.html
@@ -1,10 +1,10 @@
 {% extends "base/search.html" %}
 
-{% block title %}Search | The Web Almanac by HTTP Archive{% endblock %}
+{% block title %}Zoeken | De Web Almanac door HTTP Archive{% endblock %}
 
-{% block description %}Search Results for the Web Alamanc{% endblock %}
+{% block description %}Zoekresultaten voor de Web Almanac{% endblock %}
 
-{% block twitter_image_alt %}Web Almanac Search{% endblock %}
+{% block twitter_image_alt %}Web Almanac Zoeken{% endblock %}
 
-{% block no_results %}No Results{% endblock %}
-{% block search_in_english %}Search in English{% endblock %}
+{% block no_results %}Geen resultaten{% endblock %}
+{% block search_in_english %}Zoek in het Engels{% endblock %}
