--- a/src/templates/pt/search.html
+++ b/src/templates/pt/search.html
@@ -1,10 +1,10 @@
 {% extends "base/search.html" %}
 
-{% block title %}Search | The Web Almanac by HTTP Archive{% endblock %}
+{% block title %}Pesquisa | O Web Almanac por HTTP Archive{% endblock %}
 
-{% block description %}Search Results for the Web Alamanc{% endblock %}
+{% block description %}Resultados da pesquisa para o Web Almanac{% endblock %}
 
-{% block twitter_image_alt %}Web Almanac Search{% endblock %}
+{% block twitter_image_alt %}Web Almanac Pesquisa{% endblock %}
 
-{% block no_results %}No Results{% endblock %}
-{% block search_in_english %}Search in English{% endblock %}
+{% block no_results %}Sem resultados{% endblock %}
+{% block search_in_english %}Pesquisa em Inglês{% endblock %}
