--- a/src/templates/ru/search.html
+++ b/src/templates/ru/search.html
@@ -1,10 +1,10 @@
 {% extends "base/search.html" %}
 
-{% block title %}Search | The Web Almanac by HTTP Archive{% endblock %}
+{% block title %}Поиск | Web Almanac от HTTP Archiv{% endblock %}
 
-{% block description %}Search Results for the Web Alamanc{% endblock %}
+{% block description %}Результаты поиска для Web Almanac{% endblock %}
 
-{% block twitter_image_alt %}Web Almanac Search{% endblock %}
+{% block twitter_image_alt %}Web Almanac Поиск{% endblock %}
 
-{% block no_results %}No Results{% endblock %}
-{% block search_in_english %}Search in English{% endblock %}
+{% block no_results %}Искать на английском{% endblock %}
+{% block search_in_english %}Искать на английском{% endblock %}
