--- a/src/templates/uk/search.html
+++ b/src/templates/uk/search.html
@@ -1,10 +1,10 @@
 {% extends "base/search.html" %}
 
-{% block title %}Search | The Web Almanac by HTTP Archive{% endblock %}
+{% block title %}Пошук | Web Almanac від HTTP Archive{% endblock %}
 
-{% block description %}Search Results for the Web Alamanc{% endblock %}
+{% block description %}Результати пошуку для Web Almanac{% endblock %}
 
-{% block twitter_image_alt %}Web Almanac Search{% endblock %}
+{% block twitter_image_alt %}Пошук Web Almanac{% endblock %}
 
-{% block no_results %}No Results{% endblock %}
-{% block search_in_english %}Search in English{% endblock %}
+{% block no_results %}Немає результатів{% endblock %}
+{% block search_in_english %}Шукати англійською мовою{% endblock %}
