--- a/src/templates/zh-TW/search.html
+++ b/src/templates/zh-TW/search.html
@@ -1,10 +1,11 @@
 {% extends "base/search.html" %}
 
-{% block title %}Search | The Web Almanac by HTTP Archive{% endblock %}
+{% block title %}搜索 | Web Almanac 精粹自 HTTP Archive{% endblock %}
 
-{% block description %}Search Results for the Web Alamanc{% endblock %}
+{% block description %}Web Almanac 的搜索結果{% endblock %}
 
-{% block twitter_image_alt %}Web Almanac Search{% endblock %}
+{% block twitter_image_alt %}Web Almanac 搜索{% endblock %}
 
-{% block no_results %}No Results{% endblock %}
-{% block search_in_english %}Search in English{% endblock %}
+{% block no_results %}沒結果{% endblock %}
+{% block search_in_english %}用英語搜索
+{% endblock %}
