Remove extra newline

--- a/src/templates/zh-TW/search.html
+++ b/src/templates/zh-TW/search.html
@@ -7,5 +7,4 @@
 {% block twitter_image_alt %}Web Almanac 搜索{% endblock %}
 
 {% block no_results %}沒結果{% endblock %}
-{% block search_in_english %}用英語搜索
-{% endblock %}
+{% block search_in_english %}用英語搜索{% endblock %}
